feat: change framework to solid and add base configs such eslint stylelint ts config

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/frontend/main.tsx"></script>
+    <script type="module" src="/frontend/index.tsx"></script>
   </body>
 </html>
